<resources>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_name">Прога для практики</string>
    <string name="action_settings">Settings</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="hint_name_f_required">Фамилия </string>
    <string name="hint_name_o">Отчество</string>
    <string name="hint_name_i">Имя</string>
    <string name="hint_phone">Телефон</string>
    <string name="hint_email">e-mail</string>
    <string name="hint_login">Логин</string>
    <string name="hint_pwd">Пароль</string>
    <string name="label_name_f">Фамилия:</string>
    <string name="label_name_o">Отчество:</string>
    <string name="label_name_i">Имя:</string>
    <string name="label_phone">Телефон:</string>
    <string name="label_email">email:</string>
    <string name="label_login">Логин:</string>
    <string name="label_pwd">Пароль:</string>
    <string name="confirm_title">Удаляем ?</string>
    <string name="confirm_message">Восстановить контакт не получится. </string>
    <string name="button_cancel">Еще подумаю</string>
    <string name="button_delete">Удаляю</string>
    <string name="contact_added">Запись успешно добавлена</string>
    <string name="contact_not_added">Запись не добавлена по причине ошибки</string>
    <string name="contact_updated">Запись обновлена</string>
    <string name="contact_not_updated">Возникла ошибка при обновлении</string>
    <string name="invalid_query_uri">Invalid query Uri:</string>
    <string name="invalid_insert_uri">Invalid insert Uri:</string>
    <string name="invalid_update_uri">Invalid update Uri:</string>
    <string name="invalid_delete_uri">Invalid delete Uri:</string>
    <string name="insert_failed">Insert failed: %s</string>
    <string name="tgbtn_find_on">Сбросить</string>
    <string name="tgbtn_find_off">Найти</string>
    <string name="not_valid">че то сломалось</string>
    <string name="not_valid_name_f">Фамилия некоректена</string>
    <string name="not_valid_name_o">Отчечтво некоректено</string>
    <string name="not_valid_name_i">Имя некоректено</string>
    <string name="not_valid_phone">Номер телефона некоректен</string>
    <string name="not_valid_email">Почта некоректена</string>
    <string name="not_valid_login">Логин некоректен</string>
    <string name="not_valid_pwd">Пароль некоректен</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tgbtnFind">Поиск</string>
    <string name="btnSort">Сортировка</string>
</resources>