<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_white_24dp"
        />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <ToggleButton
            android:id="@+id/tblBtnFind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tgbtnFind"
            android:textOff="@string/tgbtn_find_off"
            android:textOn="@string/tgbtn_find_on" />

    </androidx.appcompat.widget.Toolbar>

</FrameLayout>