<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailsScrollView">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameFLabelTextView"
            android:layout_row="0"
            android:layout_column="0"
            style="@style/ContactLabelTextView"
            android:text="@string/label_name_f"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameFTextView"
            android:layout_row="0"
            android:layout_column="1"
            style="@style/ContactTextView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ContactLabelTextView"
            android:id="@+id/nameILabelTextView"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/label_name_i"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ContactTextView"
            android:id="@+id/nameITextView"
            android:layout_row="1"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameOLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/label_name_o"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameOTextView"
            style="@style/ContactTextView"
            android:layout_row="2"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/label_phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneTextView"
            style="@style/ContactTextView"
            android:layout_row="3"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_row="4"
            android:layout_column="0"
            android:text=  "@string/label_email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailTextView"
            style="@style/ContactTextView"
            android:layout_row="4"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/label_login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginTextView"
            style="@style/ContactTextView"
            android:layout_row="5"
            android:layout_column="1"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pwdLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_row="6"
            android:layout_column="0"
            android:text="@string/label_pwd"/>

        <TextView
            android:id="@+id/pwdTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="1"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Почта" />

    </GridLayout>
</ScrollView>