<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyApplication.AppBarOverlay">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main"
            app:layout_anchor="@+id/appBarLayout"
            app:layout_anchorGravity="center" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:buttonGravity="top|bottom">

        <ToggleButton
            android:id="@+id/tblBtnFind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tgbtnFind"
            android:textOff="@string/tgbtn_find_off"
            android:textOn="@string/tgbtn_find_on" />

    </androidx.appcompat.widget.Toolbar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
